Removendo enconding do app.properties e ajuste na biblioteca de validacao